# Elder_Tales

./: CMakeLists.txt  base_python_text_rpg.py  basic_ai_game_trial.cpp  basic_c++_text_rpg.cpp  main.cpp  save_data.txt  userdata.txt
UserData/: Hero.json  NewHero.json  NewUser.json  im_rb_savegame.txt  lama_savegame.txt  lmlml_savegame.txt  mal.json  mal_savegame.txt  mala_savegame.txt  mla.json  readme.md  reset.txt
data/: enemies.json  items.json
include/Core/: Crypto.h  GVM.h  Game.h  Logger.h  RNG.h  SaveManager.h  ServiceLocator.h  UserManager.h
include/Data/: EnemyDatabase.h  ItemDatabase.h
include/Domain/: CombatService.h
include/Domain/AI/: QLearningAgent.h
include/Entities/: Entity.h
src/: main.cpp
src/Core/: Crypto.cpp  GVM.cpp  Game.cpp  Logger.cpp  RNG.cpp  SaveManager.cpp  ServiceLocator.cpp  UserManager.cpp
src/Data/: EnemyDatabase.cpp  ItemDatabase.cpp
src/Domain/: CombatService.cpp
src/Domain/AI/: QLearningAgent.cpp
src/Legacy/: monolith_main.cpp
tests/: test_combat.cpp  test_databases.cpp  test_determinism.cpp  test_gvm.cpp  test_persistence.cpp  test_save_header.cpp
web/: game.js  index.html  style.css
